# boot-dot-dev-hackathon-july-2025

./: .gitignore  Makefile  README.md  architecture.md  docker-compose.yml  main.py  manual_auth.py  pyproject.toml  todo.md
app/: models.py
app/routes/: weather.py
backend/: .env.example  .gitignore  .spotipy_cache.json  Dockerfile  README.md  pyproject.toml  service_architecture.md  test_spotify_auth_credentials.py  test_spotify_client_credentials.py
backend/app/: __init__.py  dependencies.py  main.py  models.py
backend/app/db/: __init__.py
backend/app/db/redis/: __init__.py  client.py  config.py
backend/app/integrations/: gemini.py
backend/app/integrations/reccobeats/: __init__.py  client.py  config.py
backend/app/integrations/spotify/: __init__.py  client.py  config.py
backend/app/playlists/: __init__.py  models.py  repo.py  service.py
backend/app/routes/: __init__.py  playlist.py  spotify.py  weather.py
backend/app/services/: spotify_service.py
backend/tests/: test_gemini.py
frontend/: .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: _headers  _redirects
frontend/public/.well-known/: apple-app-site-association.json  assetlinks.json
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: PlaylistGeneratorForm.tsx  PlaylistSummaryCard.tsx  ShareDialog.tsx
frontend/src/hooks/: usePlaylistStorage.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/routes/: __root.tsx  about.tsx  index.tsx
(+12 files in other folders)
